[package]
name = "post-quantum-extension"
version = "0.1.0"
edition = "2021"
description = "Lattice-based Schnorr signature scheme implementation for Solana"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.14.17"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
arrayref = "0.3.7"
borsh = "0.9"
borsh-derive = "0.9"

[dev-dependencies]
solana-program-test = "1.14.17"
solana-sdk = "1.14.17"
